--- a/scratches/index.html
+++ b/scratches/index.html
@@ -21,5 +21,11 @@
 <div class="bg_time grey_bg">
     <div class="time gr">09:00</div>
 </div>
+<div class="bg_Malevich_conteiner">
+    <div class="Malevich_conteiner">
+        <div class="Malevich"></div>
+        <p class="time2">09:00</p>
+    </div>
+</div>
 </body>
 </html>
