Новое фото, шрифт. Добавлена таблица с расписанием

--- a/scratches/index.html
+++ b/scratches/index.html
@@ -43,7 +43,7 @@
         <div class="head_black2">10:45</div>
     </div>
     <div class="background_container_info">
-        <div class="container_info">
+        <div class="container_info2">
             <img class="img3" src="../images/square.png" height="210" width="210"/>
             <h3 class="time3">11:30</h3>
             <p class="name3">Кирилл Чистяков</p>
@@ -60,7 +60,108 @@
     <div class="background_container_black">
         <div class="head_black4">13:45</div>
     </div>
+    <div class="main_container2">
+        <div class="timetable">
+            <div class="column_table">
+                <P>14:45</P>
+                <P>15:30</P>
+                <P>16:15</P>
+                <P>17:00</P>
+                <P>17:45</P>
+            </div>
+            <div class="column_table">
+                <h2>Internet-marketing</h2>
+                <p>модератор секции</p>
+                <p>Кирилл Чистяко</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Роман Катеринчик</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Всеволод Жовтенко</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Татьяна Гринева</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Мила Крутченко</p>
+                <p>Владимир Кобец</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>КТОТОТАМ</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+            </div>
+            <div class="column_table">
+                <h2>Advertising, pr & design</h2>
+                <p>модератор секции</p>
+                <p>Виталий Пушкин</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Виталий Пушкин</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Макес Бурцев</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Дмитрий Грицкий</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Ростислав Касьяненко</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>КТОТОТАМ</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+            </div>
+            <div class="column_table">
+                <h2>STRATEGIC MARKETING</h2>
+                <p>модератор секции</p>
+                <p>Вадим Бортник</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Вадим Бортник</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Юлия Индык</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Александр Воеводин</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Игорь Дидок</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+                <img src="../images/square_mini.png" height="120" width="120"/>
+                <p>Денис Ворошилов</p>
+                <p>Какойтокрутойчувак<br>
+                    Украина, Киев<br>
+                    Тема: «Замечательн</p>
+            </div>
+        </div>
+    </div>
 </section>
-</div>
 </body>
 </html>
