Стили для расписания

--- a/scratches/index.html
+++ b/scratches/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="background_container_info">
         <div class="container_info">
-            <img class="img1" src="../images/square.png" height="210" width="210"/>
+            <img class="img1" src="../images/square.png" height="210" width="210" alt="foto"/>
             <h3 class="time1">09:00</h3>
             <p class="name1">Игорь Гут</p>
             <p class="description1">Какойтокрутойчувак Украина, Киев<br>
@@ -31,20 +31,19 @@
     </div>
     <div class="background_container_info">
         <div class="container_info">
-            <img class="img2" src="../images/square.png" height="210" width="210"/>
+            <img class="img2" src="../images/square.png" height="210" width="210" alt="foto"/>
             <h3 class="time2">10:00</h3>
             <p class="name2">Сергей Дидковский</p>
             <p class="description2">Какойтокрутойчувак Украина, Киев<br>
                 Тема: «Замечательная»</p>
         </div>
     </div>
-    </div>
     <div class="background_container_black">
         <div class="head_black2">10:45</div>
     </div>
     <div class="background_container_info">
         <div class="container_info2">
-            <img class="img3" src="../images/square.png" height="210" width="210"/>
+            <img class="img3" src="../images/square.png" height="210" width="210" alt="foto"/>
             <h3 class="time3">11:30</h3>
             <p class="name3">Кирилл Чистяков</p>
             <p class="description3">Какойтокрутойчувак Украина, Киев<br>
@@ -62,7 +61,7 @@
     </div>
     <div class="main_container2">
         <div class="timetable">
-            <div class="column_table">
+            <div class="column_time">
                 <P>14:45</P>
                 <P>15:30</P>
                 <P>16:15</P>
@@ -73,29 +72,29 @@
                 <h2>Internet-marketing</h2>
                 <p>модератор секции</p>
                 <p>Кирилл Чистяко</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Роман Катеринчик</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Роман Катеринчик</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Всеволод Жовтенко</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Всеволод Жовтенко</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Татьяна Гринева</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Татьяна Гринева</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Мила Крутченко</p>
-                <p>Владимир Кобец</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Мила Крутченко</h4>
+                <h4>Владимир Кобец</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>КТОТОТАМ</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>КТОТОТАМ</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
@@ -104,28 +103,28 @@
                 <h2>Advertising, pr & design</h2>
                 <p>модератор секции</p>
                 <p>Виталий Пушкин</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Виталий Пушкин</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Виталий Пушкин</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Макес Бурцев</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Макес Бурцев</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Дмитрий Грицкий</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Дмитрий Грицкий</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Ростислав Касьяненко</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Ростислав Касьяненко</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>КТОТОТАМ</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>КТОТОТАМ</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
@@ -134,28 +133,28 @@
                 <h2>STRATEGIC MARKETING</h2>
                 <p>модератор секции</p>
                 <p>Вадим Бортник</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Вадим Бортник</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Вадим Бортник</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Юлия Индык</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Юлия Индык</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Александр Воеводин</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Александр Воеводин</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Игорь Дидок</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Игорь Дидок</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
-                <img src="../images/square_mini.png" height="120" width="120"/>
-                <p>Денис Ворошилов</p>
+                <img src="../images/square_mini.png" height="120" width="120" alt="foto"/>
+                <h4>Денис Ворошилов</h4>
                 <p>Какойтокрутойчувак<br>
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
