--- a/scratches/index.html
+++ b/scratches/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-<section class="main_container">
+<section>
     <div class="background_container">
         <div class="head">PROGRAM:</div>
     </div>
@@ -59,7 +59,7 @@
     <div class="background_container_black">
         <div class="head_black4">13:45</div>
     </div>
-    <div class="main_container2">
+    <div class="main_container">
         <div class="timetable">
             <div class="column_time">
                 <P>14:45</P>
@@ -159,6 +159,15 @@
                     Украина, Киев<br>
                     Тема: «Замечательн</p>
             </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="background_logo">
+        <div class="logo">
+            <img src="../images/logo.png" height="21" width="180" alt="logo"/>
+            <p>18:00</p>
+            <p>Зал № 1</p>
         </div>
     </div>
 </section>
